feat: completed battery service - improved logs - added new error handlers - added specification for battery - completed filter with postcode and wattage